# tp-lab-5

./: .travis.yml  Answers to questions.txt  CMakeLists.txt  Groups.txt  Names.txt  README.md  Students.txt  Zhuravlev 18PI2.md  database.txt  group_input.txt  groups.txt  sample.json  student_input.txt  students.txt  students_list.txt  students_with_groups.txt  Ответы.rtf  Ответы.txt
.travis/cmake/: CodeCoverage.cmake
backup/: students.csv
data/: students.csv
file/: students.csv
include/: Classes.hpp  DatabaseProvider.h  Dean.h  Deanery.h  Deanery.hpp  DeaneryLogger.h  Group.h  Group.hpp  Header.h  Student.h  Student.hpp  class.h  common_includes.h  dean.h  deanery.h  decan.h  group.h  helper.h  mainInc.h  student.h
res/: 1.txt  2.txt  3.txt  4.txt  Groups.txt  Students.txt  students.txt
src/: 12PI-1.txt  12PMI-1.txt  13FM.txt  DatabaseProvider.cpp  Dean.cpp  Deanery.cpp  DeaneryLogger.cpp  E.txt  FIOgroup.txt  FM.txt  Group.cpp  Groups.txt  Groups_names.txt  L.txt  Lab5.cpp  Main.cpp  Output.txt  PMI.txt  Source.cpp  Student.cpp  Students.txt  class.cpp  data1.txt  dean.cpp  deanery.cpp  decan.cpp  filetoOUT  group.cpp  groupExamle.txt  groups  groups.txt  groups_spec.txt  helper.cpp  info.txt  ing.txt  input.txt  ins.txt  main.cpp  main_json.cpp  names.txt  (+19 more)
src/src/: Groups_list.txt  Students_list.txt
src/statistics/: statistics.txt
test/: DatabaseProviderTests.cpp  DeaneryLoggerTests.cpp  DeaneryTests.cpp  GroupTests.cpp  StudentTests.cpp  Students.txt  inputS.txt  tests.cpp
text/: FIOS.txt  deanery.txt  groups.txt  students.txt
(+5 files in other folders)
